        ====== plasma release 0.8.22 (v0_8_22) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.22 (v0_8_22) on Linux (cde-tx32-ldt189) ======

2005-11-09  Brian Kahne  <bkahne@freescale.com>

	* Removed references to Somerset and FIL from documentation.

	* Modified the documentation and configure/Makefile stuff so that
	we print an URL location that's specified using a command-line
	option (--web-url).

        ====== plasma release 0.8.21 (v0_8_21) on Linux (cde-tx32-ldt189) ======

2005-11-02  Brian Kahne  <bkahne@freescale.com>

	* Added copy-right notices to all C++/Plasma files.  Created a
	script called "add-copyright" that tries to do this in an
	intelligent fashion.

        ====== plasma release 0.8.20 (v0_8_20) on Linux (cde-tx32-ldt189) ======


2005-05-26  Brian Kahne  <bkahne@freescale.com>

	* If configure finds that the path to the compiler is a link, it
	tries to follow it.

	* Modified plasma.in so that the contents of an autoconf variable
	CONFOPTS will be added to cpp and gcc options when plasma is run.

	* Modified configure.ac so that if you configure on an IA32
	machine, -m32 is added to CONFOPTS.  The idea is that we want
	32-bit code generated even on an Opteron if Plasma is built on an
	IA32 machine.

        ====== plasma release 0.8.19 (v0_8_19) on Linux (cde-tx32-ldt189) ======

2005-05-18  Brian Kahne  <bkahne@freescale.com>

	* Modified Encoding so that integer template parameters are
	encoded using an 'N' prefix followed by the number as a string.

2005-04-27  Brian Kahne  <bkahne@freescale.com>

	* configure and Makefile.in files are now checked in so that the
	user does not have to run automake/autoconf to build from CVS.

        ====== plasma release 0.8.18 (v0_8_18) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.18 (v0_8_18) on Linux (cde-tx32-ldt189) ======

        ====== plasma release 0.8.18 (v0_8_18) on Linux (cde-tx32-ldt189) ======
